[project]
name = "postaldatapi-mcp"
version = "0.1.1"
description = "MCP server for PostalDataPI — postal code lookups for AI agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "PostalDataPI", email = "support@postaldatapi.com"},
]
keywords = ["mcp", "postal-code", "zip-code", "api", "ai", "claude", "postaldatapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
postaldatapi-mcp = "postaldatapi_mcp:main"

[project.urls]
Homepage = "https://postaldatapi.com"
Documentation = "https://docs.postaldatapi.com"
Repository = "https://github.com/PostalDataPI/postaldatapi-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["postaldatapi_mcp.py"]
